--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -52,16 +54,18 @@ main {
 .title {
     color: hsl(218, 44%, 22%);
     font-size: 1.3em;
-    width: 255px;
+    font-weight: 700;
     margin-bottom: 10px;
     margin-top: 15px;
+    width: 255px;
 }
 
 .description {
+    font-size: .95em;
+    font-weight: inherit;
+    color: hsl(216, 15%, 48%);
     margin-top: 0;
     margin-bottom: 40px;
-    font-size: .95em;
-    color: hsl(216, 15%, 48%);
     width: 245px;
 }
 
